[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gpt-oss-finetuning"
version = "0.1.0"
description = "Fine-tuning GPT OSS model on AWS SageMaker"
authors = [{name = "Your Name", email = "your.email@example.com"}]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "torch",
    "transformers,
    "datasets",
    "accelerate",
    "peft",
    "bitsandbytes",
    "sagemaker",
    "boto3",
    "pyyaml",
    "wandb",
    "tqdm",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "flake8",
    "mypy",
]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true