[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gpt-oss-finetuning"
version = "0.1.0"
description = "Fine-tuning GPT OSS model on AWS"
authors = [{name = "Madhur Prashant", email = "Madhur.prashant7@gmail.com"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.8.0",
    "transformers>=4.55.3",
    "datasets",
    "accelerate",
    "peft",
    "sagemaker",
    "boto3",
    "pyyaml",
    "wandb",
    "tqdm",
    "numpy",
    "torchvision",
    "triton>=3.4.0; platform_machine != 'arm64' or platform_system != 'Darwin'",
    "bitsandbytes; platform_system != 'Darwin'",
    "unsloth_zoo[base] @ git+https://github.com/unslothai/unsloth-zoo",
    "unsloth[base] @ git+https://github.com/unslothai/unsloth",
    "ipykernel",
    "jupyter_client",
    "pyzmq",
    "zmq>=0.0.0",
]
